--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
 </head>
 <body>
   <div id="app"></div>
-  <script type="module" src="/index.js"></script>
-  <script nomodule src="/app.nomodule.js"></script>
+  <script type="module">
+    import App from '/App.svelte';
+    new App({ target: document.getElementById('app') });
+  </script>
 </body>
