🐄 Beefin’ up the UI

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=DM+Mono&display=swap" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="/_dist_/styles/app.css" />
   </head>
   <body>
